--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -36,19 +36,17 @@
         <div class="card mb-0">
             <div class="flex justify-content-between mb-3">
                 <div>
-                    <span class="block text-500 font-medium mb-3"
-                        >Customers</span
-                    >
-                    <div class="text-900 font-medium text-xl">28441</div>
+                    <span class="block text-500 font-medium mb-3">Equipes</span>
+                    <div class="text-900 font-medium text-xl">{{ equipeNumber}}</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-cyan-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-inbox text-cyan-500 text-xl"></i>
+                    <i class="pi pi-shield text-cyan-500 text-xl"></i>
                 </div>
             </div>
-        
+
         </div>
     </div>
     <div class="col-12 lg:col-6 xl:col-3">
@@ -56,25 +54,25 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3"
-                        >Comments</span
+                        >Joueurs</span
                     >
-                    <div class="text-900 font-medium text-xl">152 Unread</div>
+                    <div class="text-900 font-medium text-xl">{{playersNumber}}</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-purple-100 border-round"
                     [ngStyle]="{ width: '2.5rem', height: '2.5rem' }"
                 >
-                    <i class="pi pi-comment text-purple-500 text-xl"></i>
+                    <i class="pi pi-users text-purple-500 text-xl"></i>
                 </div>
             </div>
-            
+
         </div>
     </div>
 
 
     <div class="col-12 xl:col-6">
         <div class="card">
-            <h5>Sales Overview</h5>
+            <h5>Statistiques</h5>
             <p-chart
                 type="line"
                 [data]="data"
@@ -82,6 +80,6 @@
             ></p-chart>
         </div>
 
-       
+
     </div>
 </div>
